Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-18747

Inconsistency between TextInput and TextEdit cursor positioning when switching from read-only state to normal edit mode

    XMLWordPrintable

Details

    Description

      When switching from read-only state to normal edit mode, TextEdit positions cursor to the end of text whereas with TextInput this has no effect on cursor position. I wonder if there is a valid reason for this inconsistency in behaviour between these two sister components?

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            denexter Andrew den Exter (closed Nokia identity) (Inactive)
            jaakkorp Jaakko Korpela
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes