Move the cursor position to the end when TextInput.readOnly is cleared.

Improves consistency with TextEdit.

Task-number: QTBUG-18747
Change-Id: Ieb0a332441557fc6ba4c5ddaafea5c634aff1ee4
Reviewed-on: http://codereview.qt.nokia.com/2131
Reviewed-by: Qt Sanity Bot <qt_sanity_bot@ovi.com>
Reviewed-by: Martin Jones <martin.jones@nokia.com>